# ConwaysGameOfLife

./: .pylintrc  README.md  pyproject.toml
game_of_life/: __init__.py  __main__.py  constants.py  custom_types.py  gol.py  menu.py  presets.py  validate.py
tests/: test_custom_types.py  test_gol.py  test_main.py  test_menu.py  test_presets.py  test_validate.py
