[tool.poetry]
name = "game_of_life"
version = "0.5.0"
description = ""
authors = ["Steve Daulton"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
pytest = "^7.3.1"
pydocstyle = "^6.3.0"
pytest-cov = "^4.1.0"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
